// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should handle the iconTheme props 1`] = `
<button
  className="btn btn-gradient-primary btn-primary btn-icon-left"
  onClick={[Function]}
  type="button"
>
  <span>
    Click Me
    <Icon
      isGradient={true}
      name="create"
      theme="primary"
    />
  </span>
</button>
`;

exports[`<Button /> should render 1`] = `
<button
  className="btn btn-gradient-primary btn-primary"
  onClick={[Function]}
  type="button"
>
  <span>
    Click Me
  </span>
</button>
`;

exports[`<Button /> should render with an icon 1`] = `
<button
  className="btn btn-gradient-primary btn-primary btn-icon-left"
  onClick={[Function]}
  type="button"
>
  <span>
    Click Me
    <Icon
      isGradient={true}
      name="create"
    />
  </span>
</button>
`;
